# meshcore-keygen-docker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.dev.yml  docker-compose.yml
.claude/docs/: 2026-03-11-plan-gpu-trait-abstraction.md  2026-03-11-research-gpu-trait-abstraction.md
.github/workflows/: rust.yml
benches/: keygen_search.rs  prefix_match.rs
cuda/: THIRD-PARTY-NOTICES  vanity_kernel.cu
docs/: benchmarks.md  gpu.md
docs/plans/: 2026-03-10-metal-gpu-design.md  2026-03-10-metal-gpu-plan.md
metal/: vanity_kernel.metal
src/: checkpoint.rs  cpu.rs  deterministic.rs  gpu.rs  keygen.rs  lib.rs  main.rs  metal_gpu.rs  philox.rs  search.rs  types.rs
src/server/: db.rs  mod.rs  models.rs  queue.rs  state.rs
src/server/api/: benchmarks.rs  estimate.rs  jobs.rs  logs.rs  mod.rs  results.rs  settings.rs  ws.rs
static/: index.html
ui/: index.html  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css
ui/src/components/: Dashboard.tsx  Layout.tsx  NewJob.tsx  Queue.tsx  Results.tsx  Settings.tsx  Sidebar.tsx  Topbar.tsx
ui/src/components/pages/: ActiveJob.tsx  Benchmarks.tsx  Dashboard.tsx  Logs.tsx  NewJob.tsx  Queue.tsx  Results.tsx  Schedules.tsx  Settings.tsx
ui/src/components/shared/: index.tsx
