[package]
name = "mc-keygen"
version = "0.1.0"
edition = "2021"
description = "MeshCore vanity Ed25519 key generator"
license = "MIT OR Apache-2.0"

[features]
default = []
cuda = ["dep:cudarc"]

[dependencies]
clap = { version = "4", features = ["derive"] }
curve25519-dalek = { version = "4", features = ["precomputed-tables"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
cudarc = { version = "0.19", optional = true, features = ["cuda-13010"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "prefix_match"
harness = false

[[bench]]
name = "keygen_search"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
